deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ar-game-2
  namespace: svc0176p-isas-fsd
  labels:
    app.kubernetes.io/name: ar-game-2
    app.kubernetes.io/instance: ar-game-2
    app.kubernetes.io/component: web
    app.kubernetes.io/managed-by: kubectl
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: ar-game-2
      app.kubernetes.io/instance: ar-game-2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ar-game-2
        app.kubernetes.io/instance: ar-game-2
        app.kubernetes.io/component: web
        app.kubernetes.io/managed-by: kubectl
    spec:
      containers:
        - name: ar-game-2
          image: ghcr.io/epfl-fsd/ar-game-2:0.5.0
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: 256Mi
            limits:
              cpu: 50m
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: ar-game-2
  namespace: svc0176p-isas-fsd
  labels:
    app.kubernetes.io/name: ar-game-2
    app.kubernetes.io/instance: ar-game-2
    app.kubernetes.io/component: web
    app.kubernetes.io/managed-by: kubectl
spec:
  selector:
    app.kubernetes.io/name: ar-game-2
    app.kubernetes.io/instance: ar-game-2
  ports:
    - name: http
      port: 80
      targetPort: 3000
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ar-game-2
  namespace: svc0176p-isas-fsd
  labels:
    app.kubernetes.io/name: ar-game-2
    app.kubernetes.io/instance: ar-game-2
    app.kubernetes.io/component: web
    app.kubernetes.io/managed-by: kubectl
    route: public-cf
spec:
  host: ar.fsd.epfl.ch
  to:
    kind: Service
    name: ar-game-2
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
